# MyServer-VEry-COOl-COUrses

./: CMakeLists.txt  README.md  main.cc  yes  yes.pub
config/: config.json
controllers/: AuthController.cc  AuthController.h  ChannelController.cc  ChannelController.h  CourseController.cc  CourseController.h  FileService.cc  FileService.h  JsonCtrl.cc  JsonCtrl.h  UserController.cc  UserController.h  testCourses.sh
models/: CourseChapters.cc  CourseChapters.h  CourseEnrollments.cc  CourseEnrollments.h  CourseVideos.cc  CourseVideos.h  Courses.cc  Courses.h  ModerationRequests.cc  ModerationRequests.h  ModerationTemplates.cc  ModerationTemplates.h  ServerLogs.cc  ServerLogs.h  UserProgress.cc  UserProgress.h  UserStats.cc  UserStats.h  Users.cc  Users.h  model.json
public/: index.html
public/app/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja  myServeR.html  myServeR.js  myserver_qmltyperegistrations.cpp
public/app/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake  myServeR_qml.cmake  myServeR_res.cmake
public/app/.qt/qml_imports/: myServeR_conf.cmake
public/app/.qt/rcc/: myServeR_raw_qml_0.qrc  qmake_myQML.qrc  qrc_myServeR_raw_qml_0.cpp  qrc_qmake_myQML.cpp  qrc_resources.cpp  resources.qrc
public/app/.rcc/qmlcache/: all_aotstats.aotstatslist  module_myServeR.aotstatslist  myServeR_qmlcache_loader.cpp
public/app/meta_types/: myServeR_json_file_list.txt  myServeR_json_file_list.txt.timestamp  qt6myserver_debug_metatypes.json.gen
public/app/myQML/: myServeR_qml_module_dir_map.qrc  qmldir
public/app/myQML/H/: channelmanager.h  course.h  coursedetails.h  coursemanager.h  database.h  googleauth.h  lesson.h  navigationhistory.h  profilemanager.h  thememanager.h  videocoursemanager.h
public/app/myQML/QML/: AuthPage.qml  CardCourse.qml  CardCourseProfile.qml  CardVideo.qml  CardVideoListView.qml  ColorButton.qml  JSONListModel.qml  LoginPage.qml  Main.qml  MainPage.qml  MainSearchPage.qml  ProfilePage.qml  ProfileСhannel.qml  RegisterPage.qml  SearchTagInput.qml  SettingsPage.qml  VideoMainAndroid.qml  VideoMainDesktop.qml  VideoMainWasm.qml  VideoPlayer.qml
public/app/myServeR_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
public/app/myServeR_autogen/HIIONSNXJL/: moc_channelmanager.cpp  moc_channelmanager.cpp.json  moc_course.cpp  moc_course.cpp.json  moc_coursedetails.cpp  moc_coursedetails.cpp.json  moc_coursemanager.cpp  moc_coursemanager.cpp.json  moc_googleauth.cpp  moc_googleauth.cpp.json  moc_lesson.cpp  moc_lesson.cpp.json  moc_navigationhistory.cpp  moc_navigationhistory.cpp.json  moc_profilemanager.cpp  moc_profilemanager.cpp.json  moc_thememanager.cpp  (+3 more)
public/app/qmltypes/: myServeR_foreign_types.txt
ssl/: cert.pem  key.pem
test/: CMakeLists.txt  testk6.js
(+82 files in other folders)
